Replace byte-buddy with ASM for runtime method interception
Byte-buddy was used solely for redefining class methods at runtime
(e.g., intercepting View.isInEditMode()). This replaces it with
direct ASM bytecode transformation + JDK Attach/Instrumentation APIs,
removing ~2 transitive dependencies.

Key changes:
- AgentInstaller: self-attaches via VirtualMachine to obtain
  Instrumentation, replacing ByteBuddyAgent.install()
- InterceptorRegistrar: uses ASM ClassVisitor to rewrite method
  bodies and Instrumentation.retransformClasses() to apply them,
  replacing ByteBuddy's redefine/MethodDelegation
- retransformClasses (not redefineClasses) ensures compatibility
  with classes already modified by build-time ASM transforms
- JVM flags -Djdk.attach.allowAttachSelf=true and
  -XX:+EnableDynamicAgentLoading added to test tasks

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>